# 6210_barrier

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  barrier.sublime-project  gtmp.h  gtmp_counter.c  gtmp_mcs.c  gtmpi_dissemination.c  gtmpi_tournament.c  hello_mpi.c  hello_openmp.c  hello_openmp_mpi.c  mp_mpi.sh  openmp.sh  openmpi.sh  run.py
6210_barrier/: Makefile  barrier.sublime-project  gtmp_counter.c  gtmp_mcs.c  hello_openmp.c  run.py
